# improvement-api

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  setup.py
.github/workflows/: codeql.yml  main.yml
app/: .env.template  main.py  mypy.ini
app/api/: dependancies.py  router.py  utils.py
app/api/endpoints/: auth.py  board.py  user.py
app/core/: config.py  security.py
app/crud/: board.py  card.py  column.py  crud_user.py  user.py
app/db/: decorators.py  init_db_schema.py  init_db_schema_and_functions.py  schema.py  utils.py
app/db/functions/: 1_users.sql  2_boards.sql  3_columns.sql  4_cards.sql  boards.sql  users.sql
app/db/schema/: 1_init.sql  2_users.sql  3_boards.sql  4_columns.sql  5_cards.sql  boards.sql  columns.sql  users.sql
app/models/: api_model.py  board.py  card.py  column.py  token.py  user.py
app/redis/: pub.py  sub.py
app/utils/: board.py  camelcase.py  openapi.py
app/websocket/: manager.py
tests/: conftest.py  test_auth.py  test_board.py  test_columns.py  test_user.py
