[tool.poetry]
name = "improvement-api"
version = "0.1.0"
description = "API for the Improvement web app"
authors = ["Henri Kestiö <henri.kestio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.64.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
asyncpg = "^0.22.0"
requests = "^2.25.1"
pydantic = {extras = ["email"], version = "^1.8.2"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-dotenv = "^0.17.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests"
]

[tool.black]
exclude = ".eggs|.git|.vscode|seeds|build|dist"
line_length = 120
