[tool.poetry]
name = "improvement-api"
version = "0.1.0"
description = "API for the Improvement web app"
authors = ["Henri Kestiö <henri.kestio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
asyncpg = "^0.25.0"
requests = "^2.26.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-dotenv = "^0.19.2"
python-multipart = "^0.0.5"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests"
]

[tool.black]
exclude = ".eggs|.git|.vscode|seeds|build|dist"
line_length = 120
